# LHY-AI-Recruit-Assistant

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/v1/: __init__.py  analysis.py  auth.py  departments.py  positions.py  resumes.py  users.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/schemas/: __init__.py  common.py  department.py  position.py  resume.py  user.py
backend/app/services/: __init__.py  auth.py  llm.py  pdf_parser.py
backend/scripts/: seed.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Login.tsx  Parse.tsx  Positions.tsx  Recommend.tsx  Resumes.tsx  Users.tsx
frontend/src/store/: auth.ts
